corrections and adding join function to Games module
