# games/presenters/http/dtos/end_game_dto.go
@@ -1,0 +1,5 @@
+package dtos
+
+type EndGameDto struct {
+	WinnerId string `json:"winnerId"`
+}
