# games/presenters/http/dtos/join_game_dto copy.go
@@ -1,0 +1,5 @@
+package dtos
+
+type JoinGameDto struct {
+	PlayerId string `json:"playerId"`
+}
